[gd_scene load_steps=5 format=3 uid="uid://ceeb8muohhas5"]

[ext_resource type="Script" path="res://menus/multiplayer/host_or_connect/connect/connect.gd" id="1_5bvv7"]
[ext_resource type="Texture2D" uid="uid://bfhbviaky3jmm" path="res://menus/sprites/background.jpg" id="1_6c53e"]
[ext_resource type="PackedScene" uid="uid://xvtrv8cttec7" path="res://menus/go_to_scene_button.tscn" id="2_nryll"]
[ext_resource type="PackedScene" uid="uid://cu28gdxiit507" path="res://menus/multiplayer/color_selector.tscn" id="3_j2wwp"]

[node name="Connect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5bvv7")
lobby_scene_path = "res://menus/multiplayer/lobby/lobby.tscn"

[node name="Christian" type="Sprite2D" parent="."]
modulate = Color(0.396078, 0.396078, 0.396078, 1)
position = Vector2(160, 96)
scale = Vector2(0.166667, 0.16)
texture = ExtResource("1_6c53e")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 192.0

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="NameLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
alignment = 1
max_length = 128

[node name="ColorSelector" parent="ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource("3_j2wwp")]
layout_mode = 2

[node name="AddrLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Address"
horizontal_alignment = 1

[node name="AddrEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PortLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Port"
horizontal_alignment = 1

[node name="PortEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "2018"
alignment = 1
max_length = 5

[node name="Ok" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Ok"

[node name="ReturnButton" parent="ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource("2_nryll")]
layout_mode = 2
text = "Return"
next_scene_path = "res://menus/multiplayer/host_or_connect/host_or_connect.tscn"

[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_return_pressed"]
